--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
-    font-size: 18px;
+    font-size: 17px;
 }
 a {
     text-decoration: none;
@@ -46,6 +46,7 @@ a:hover {
     height: 60px;
     background: white;
     position: fixed;
+    box-shadow: 0px 3px 3px rgba(0,0,0,0.5);
 }
 
 #topbar-menu {
@@ -185,4 +186,37 @@ h3 {
     margin-top: 0;
     font-size: 22px;
     color: rgba(255,255,255,0.9);
+}
+
+/*  highlighting  */
+.code-section {
+    background: rgba(0,0,100,0.05);
+    padding: 10px;
+    border-radius: 2px;
+    border: #888888 solid 1px;
+    margin-bottom: 13px;
+    margin-top: 10px;
+    font-size: 16px;
+}
+.blue {
+    color: rgb(47, 73, 189);
+    display: inline-block;
+}
+.light-blue {
+    color: rgb(49, 122, 218);
+    display: inline-block;
+}
+.gray {
+    margin: 2px 0;
+    color: rgb(52, 52, 52);
+    display: inline-block;
+}
+.comment {
+    color: rgba(100,100,100,1);
+}
+.undertext {
+    color: rgba(100,100,100,1);
+    font-size: 14px;
+    margin-top: 3px;
+    margin-bottom: 5px;
 }
