--- a/page-notifications/page-notifications.css
+++ b/page-notifications/page-notifications.css
@@ -1,16 +1,17 @@
-/*version 1.0.1*/
+/*version 1.0.2*/
 #page-notifications-container {
-    width: 360px;
+    width: 100%;
+    max-width: 360px;
     position: fixed;
 
     bottom: 0px;
     right: 0px;
 
     padding: 10px;
+    box-sizing: border-box;
 
     font-family: Arial, Helvetica, sans-serif;
     z-index: 10;
-
     overflow: hidden;
 }
 
@@ -52,7 +53,7 @@
     overflow: hidden;
     width: auto;
     margin-left: 30px;
-    padding: 5px;
+    padding: 7px;
 }
 
 /*  Title  */
@@ -110,7 +111,9 @@
 }
 
 /*  dark  */
- 
+.page-notifications-dark .page-notifications-timer {
+    background: #dfdfff;
+}
 .page-notifications-dark .page-notifications-right {
     background: #222226;
     color: #dfdfff;
@@ -122,14 +125,19 @@
     color: #aaaaaa;
 }
 
-
 .page-notifications-close {
     position: absolute;
-    right: 5px;
+    right: 3px;
     top: 0px;
     font-size: 18px;
+    padding: 3px;
     font-weight: bold;
     cursor: pointer;
+
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 .page-notifications-close:hover {
     opacity: 0.8;
@@ -137,20 +145,20 @@
 
 /*  Types  */
 
-.page-notifications-info {
+.page-notifications-info .page-notifications-left{
     background: #03A9F4;
     font-size: 1.4em;
 }
-.page-notifications-success {
+.page-notifications-success .page-notifications-left{
     background: #4cd137;
     font-size: 1.0em;
 }
-.page-notifications-warning {
+.page-notifications-warning .page-notifications-left{
     background: #e67e22;
     font-size: 1.1em;
     font-weight: 500;
 }
-.page-notifications-error {
+.page-notifications-error .page-notifications-left{
     background: #e84118;
     font-size: 1.4em;
     font-weight: 500;
